# Chill-Xicz-Discord-Bot

./: README.md  bot.py  env.example  main.py  pyproject.toml  requirements.txt
