[tool.poetry]
name = "file"
version = "0.1.0"
description = ""
authors = ["rahul <rahul@surecash.net>"]

[tool.poetry.dependencies]
python = "^3.10"
aiocron = "1.8"
aiohttp = "3.7.4.post0"
async-timeout = "3.0.1"
attrs = "21.4.0"
"backports.zoneinfo" = "0.2.1"
chardet = "4.0.0"
croniter = "1.3.5"
"discord.py" = "1.7.3"
dnspython = "2.2.1"
idna = "3.3"
multidict = "6.0.2"
pymongo = "4.2.0"
python-dateutil = "2.8.2"
python-dotenv = "0.20.0"
pytz-deprecation-shim = "0.1.0.post0"
schedule = "1.1.0"
six = "1.16.0"
typing-extensions = "4.3.0"
tzdata = "2022.1"
tzlocal = "4.2"
yarl = "1.7.2"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
